namespace java com.heepay.rpc.tpds.model

struct DataInfoRequestModel {
    1: string checkType;
    2: string customerId;
    3: string accNo;
    4: string beginDate;
    5: string endDate;
    6: string beginPage;
    7: string endPage;
    8: string showNum;
    9: string note;
}